--- a/index.html
+++ b/index.html
@@ -12,11 +12,18 @@
 </head>
 
 <body>
-    <div class="title"></div>
-    <div class="container"> 
-        <ol id="pokedex"></ol>
-    </div>
-    <script src="js/pokedex.js"></script>
+    <header>
+            <div class="title"></div>
+    </header>
+
+    <main>
+        <div class="container"> 
+            <ol id="pokedex"></ol>
+        </div>
+    </main>
+
+    <footer>
+    </footer>
 </body>
 
 </html>
