--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     </main>
 
     <footer>
+        <div class="searchContainer">
+            <input placeholder="" class="js-search" type="text" onkeyup="filter()" id="search">
+            <i class=""></i>
+          </div>          
     </footer>
 </body>
 
