STYLE: Removed the autocomplete funcion of the input

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <footer>
         <div class="searchContainer">
-            <input placeholder="" class="js-search" type="text" onkeyup="filter()" id="search">
+            <input placeholder="" class="js-search" type="text" onkeyup="filter()" id="search" autocomplete="off">
             <i class=""></i>
           </div>          
     </footer>
