--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
 <body>
     <header>
-            <div class="title"></div>
+            <div class="title">
+            <a href="./memorygame.html"><div class="game">GAME</div></a>
+            </div>
     </header>
 
     <main>
