FEAT: Added final screen to the game and the randomize pokemon fetch

--- a/memorygame.html
+++ b/memorygame.html
@@ -14,6 +14,7 @@
     <title>PokeMEMORY !!</title>
 </head>
 <body>
+
     <header>
         <nav>
                 <a href="./index.html">◀ Pokedex</a>
@@ -21,19 +22,30 @@
         </nav>
         <div class="titleImage"></div>
     </header>
+
     <main>
-        <div class="box__container">
-            <!-- <div class="box__container--scene">
-                <div class="box__container--card" id="0">
-                    <div class="box__container--card--back">back</div>
-                    <div class="box__container--card--front">front</div>
-                </div>
-            </div> -->
+        <div class="box__container hide">
 
 
     </main>
-    <footer>
 
+    <footer>
+        <div class="oak">
+            <div class="oak--text">
+                <p style="font-size: 15px">Bienvenidos!</p>
+                <p>Os propongo un juego, emparejar los pokemons iguales!</p>
+                <p>Para ello ve clicando a las pokeballs y recuerda dónde está cada pokemon para hacer que la pareja que escojas sea la misma.</p>
+                <p class="start">Empecemos !</p>
+            </div>
+        </div>
+        <div class="ash hide">
+            <div class="ash--text">
+                <p style="font-size: 15px">You Catched 'Em All !!!</p>
+                <p>Conseguiste cazar todas las parejas de pokemons</p>
+                <p>Si quieres volver a empezar y descurir pokemons nuevos...</p>
+                <p class="reset" onclick="window.location.reload()">Volvamos a ir de caza !!</p>
+            </div>
+        </div>
     </footer>
     
 </body>
