--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
             <div class="title">
-            <a href="./memorygame.html"><div class="game">GAME</div></a>
+            <a href="./memorygame.html"><div class="game"></div></a>
             </div>
     </header>
 
