--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Pokedex</title>
     <link rel="stylesheet" href="styles/pokeapi.css" />
     <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
     <script src="./pokedex.js" defer></script>
     <link rel="icon" type="image/png" href="./assets/images/pokeball-icon.png">
 </head>
