FIX: changed the order of the game div and ahref for precise clicking

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header>
             <div class="title">
-            <a href="./memorygame.html"><div class="game"></div></a>
+            <div class="game"><a href="./memorygame.html"></a></div>
             </div>
     </header>
 
